# agent-chime

./: .gitignore  README.md  design.md  pyproject.toml  requirements.md
agent_chime/: __init__.py  __main__.py  cli.py  config.py  events.py
agent_chime/adapters/: __init__.py  base.py  claude.py  codex.py  opencode.py
agent_chime/audio/: __init__.py  cache.py  renderer.py
agent_chime/system/: __init__.py  detector.py  model_selector.py
agent_chime/tts/: __init__.py  broker.py  models.py  provider.py
earcons/: .gitkeep
tests/: __init__.py  test_adapters.py  test_broker.py  test_config.py  test_events.py  test_models.py
