[project]
name = "agent-chime"
version = "0.1.0"
description = "Audible notifications for agentic CLI workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kevin Chen" }]
keywords = ["tts", "audio", "cli", "agent", "notifications"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx-audio>=0.3.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "ty>=0.0.1a7",
]

[project.scripts]
agent-chime = "agent_chime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_chime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Strict mode equivalent settings
possibly-unresolved-reference = "error"
division-by-zero = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=agent_chime --cov-report=term-missing"
